# callfunc

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  azure-pipelines.yml  haxelib.json  hxcpp_build.xml  libs.hxml  test.html  test.hxml
example/curlexample/: Curl.hx  CurlExample.hx
example/randomexample/: RandomExample.hx
hxml/: docs-gen.hxml  docs-xml.hxml  example_curl.cpp.hxml  example_curl.hl.hxml  example_curl.hxml  example_random.cpp.hxml  example_random.hl.hxml  example_random.hxml  test.cpp.hxml
script/: build_libffi.sh  curl_opts.sh  export_ld_path.sh  get_chromedriver.sh  get_emsdk.sh  get_hashlink.sh  get_hashlink_bin.sh  get_haxe_bin.sh  get_libffi.sh  get_mingw_bin.sh  get_neko_bin.sh  hashlink_sdl.patch  install_hashlink.sh  install_libffi.sh  make_callfunc.sh  make_examplelib.sh  out_cpp_run.sh  out_hl_run.sh  test_build_emscripten_module.sh  test_js_headless.py  travis_install_hashlink.sh  travis_install_libffi.sh  zip_release.py
script/azure-pipeline-templates/: install_cmake.yml
script/template/: bin.md
src/c/: CMakeLists.txt  Makefile  callfunc.c  callfunc.h  callfunc_hxcpp.cpp
src/haxe/callfunc/: AnyInt.hx  AutoInt.hx  AutoInt64.hx  BytesDataView.hx  BytesTools.hx  Callback.hx  Callfunc.hx  Context.hx  CoreDataType.hx  DataType.hx  DataView.hx  Debug.hx  Disposable.hx  Function.hx  FunctionTools.hx  Library.hx  Memory.hx  MemoryTools.hx  Pointer.hx  PointerTools.hx  StructAccess.hx  StructDef.hx  StructType.hx
src/haxe/callfunc/core/: BasicPointer.hx  CallbackHandle.hx  Context.hx  CoreDataTypeTable.hx  DataTypeTools.hx  FunctionHandle.hx  LibraryHandle.hx  StructTypeHandle.hx
src/haxe/callfunc/core/dummy/: DummyContext.hx
src/haxe/callfunc/core/emscripten/: EmCallback.hx  EmContext.hx  EmDataType.hx  EmFunction.hx  EmLibrary.hx  EmPointer.hx  EmStructType.hx  EmscriptenModule.hx  ModuleTools.hx
src/haxe/callfunc/core/impl/: CallbackImpl.hx  ContextImpl.hx  ExternDef.hx  FunctionImpl.hx  LibraryImpl.hx  NativeUtil.hx  PointerImpl.hx  StructTypeImpl.hx
src/haxe/callfunc/core/serialization/: ArgSerializer.hx  DataValueSerializer.hx  NumberUtil.hx  StructTypeSerializer.hx
src/haxe/callfunc/emscripten/: EmCallback.hx  EmContext.hx  EmDataType.hx  EmFunction.hx  EmLibrary.hx  EmMemory.hx  EmPointer.hx  EmStructType.hx  EmscriptenModule.hx  ModuleTools.hx
src/haxe/callfunc/impl/: ArgSerializer.hx  CallbackImpl.hx  ContextImpl.hx  DataTypeAlias.hx  DataValueSerializer.hx  ExternDef.hx  FunctionImpl.hx  LibraryImpl.hx  MemoryImpl.hx  NativeUtil.hx  NumberUtil.hx  PointerImpl.hx  StructTypeImpl.hx  StructTypeSerializer.hx
src/haxe/callfunc/string/: Encoder.hx  Encoding.hx  StringUtil.hx
test/c/examplelib/: CMakeLists.txt  Makefile  examplelib.c  examplelib.h
test/haxe/callfunc/: ListDataTypes.hx  PerformanceTest.hx  TestAll.hx
test/haxe/callfunc/test/: TestAnyInt.hx  TestCairoMatrix.hx  TestCairoSurface.hx  TestCallfunc.hx  TestDataView.hx  TestExamplelib.hx  TestMemory.hx  TestPointer.hx  TestStructAccess.hx
